Move ghost vote token to bottom-left, avoid overlapping + button

--- a/client/src/components/Grimoire.css
+++ b/client/src/components/Grimoire.css
@@ -2384,7 +2384,7 @@
 .ghost-vote-token {
   position: absolute;
   bottom: -10px;
-  right: -10px;
+  left: -10px;
   width: 32px;
   height: 32px;
   border-radius: 50%;
